--- a/resources/window.ui
+++ b/resources/window.ui
@@ -115,6 +115,13 @@
                         </child>
                       </object>
                     </child>
+                    <child>
+                      <object class="GtkButton">
+                        <property name="label">Start</property>
+                        <property name="tooltip-text" translatable="yes">Start</property>
+                        <property name="action-name">win.translate-page</property>
+                      </object>
+                    </child>
                   </object>
                 </child>
               </object>
