--- a/resources/window.ui
+++ b/resources/window.ui
@@ -2,24 +2,20 @@
 <interface>
   <menu id="main-menu">
     <item>
-      <attribute name="label" translatable="yes">_Translate Image</attribute>
-      <attribute name="action">win.translate-image</attribute>
-    </item>
-    <item>
-      <attribute name="label" translatable="yes">_Google</attribute>
+      <attribute name="label" translatable="yes">Use Google</attribute>
       <attribute name="action">win.toggle-language</attribute>
       <attribute name="target">google</attribute>
     </item>
     <item>
-      <attribute name="label" translatable="yes">_Deepl</attribute>
+      <attribute name="label" translatable="yes">Use Deepl</attribute>
       <attribute name="action">win.toggle-language</attribute>
       <attribute name="target">deepl</attribute>
     </item>
   </menu>
   <template class="ProfileWindow" parent="AdwApplicationWindow">
     <property name="title" translatable="yes">Game Translator</property>
-    <property name="default_width">650</property>
-    <property name="default_height">550</property>
+    <property name="default_width">800</property>
+    <property name="default_height">600</property>
     <property name="content">
       <object class="GtkStack" id="stack">
         <property name="transition-type">crossfade</property>
@@ -127,113 +123,73 @@
                     </child>
                     <child>
                       <object class="GtkBox">
+                        <property name="margin-top">10</property>
+                        <property name="margin-start">10</property>
+                        <property name="margin-end">10</property>
                         <property name="orientation">vertical</property>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="halign">start</property>
+                            <property name="label">Aplication: </property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkDropDown" id="dd_screen" />
+                        </child>
                         <child>
                           <object class="GtkBox">
                             <property name="orientation">horizontal</property>
                             <child>
-                              <object class="GtkDropDown" id="dd_screen" />
+                              <object class="GtkBox">
+                                <property name="orientation">vertical</property>
+                                <property name="margin-end">10</property>
+                                <child>
+                                  <object class="GtkLabel">
+                                    <property name="halign">start</property>
+                                    <property name="label">Language: </property>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkDropDown" id="dd_ocr" />
+                                </child>
+                              </object>
                             </child>
                             <child>
-                              <object class="GtkDropDown" id="dd_ocr" />
-                            </child>
-                            <child>
-                              <object class="GtkDropDown" id="dd_translation" />
+                              <object class="GtkBox">
+                                <property name="orientation">vertical</property>
+                                <child>
+                                  <object class="GtkLabel">
+                                    <property name="halign">start</property>
+                                    <property name="label">Target language: </property>
+                                  </object>
+                                </child>
+                                <child>
+                                  <object class="GtkDropDown" id="dd_translation" />
+                                </child>
+                              </object>
                             </child>
                           </object>
                         </child>
                         <child>
                           <object class="GtkCheckButton" id="chk_full_screen">
-                            <property name="label">Translate whole screen</property>
+                            <property name="label">Translate whole area</property>
                             <property name="active">false</property>
                           </object>
                         </child>
                         <child>
-                          <object class="GtkButton">
-                            <property name="label">Configure</property>
+                          <object class="GtkButton" id="config_button">
+                            <property name="label">Configure Translation Areas</property>
                             <property name="tooltip-text" translatable="yes">Configure</property>
                             <property name="action-name">win.configure-page</property>
                           </object>
                         </child>
                         <child>
                           <object class="GtkButton" id="action_button">
+                            <property name="margin-top">5</property>
+                            <property name="margin-bottom">10</property>
                             <property name="label">Start</property>
                             <property name="tooltip-text" translatable="yes">Start</property>
                             <property name="action-name">win.on-action</property>
-                          </object>
-                        </child>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-              </object>
-            </property>
-          </object>
-        </child>
-        <child>
-          <object class="GtkStackPage">
-            <property name="name">image</property>
-            <property name="child">
-              <object class="GtkBox">
-                <property name="orientation">vertical</property>
-                <child>
-                  <object class="AdwHeaderBar">
-                    <binding name="show-end-title-buttons">
-                      <lookup name="folded">leaflet</lookup>
-                    </binding>
-                    <child type="start">
-                      <object class="GtkButton">
-                        <property name="icon-name">go-previous-symbolic</property>
-                        <property name="tooltip-text" translatable="yes">Go Back</property>
-                        <property name="action-name">win.new-profile</property>
-                      </object>
-                    </child>
-                    <child type="end">
-                      <object class="GtkWindowControls">
-                        <property name="side">end</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkBox">
-                    <property name="orientation">horizontal</property>
-                    <child>
-                      <object class="GtkButton">
-                        <property name="label">Search Image</property>
-                        <property name="tooltip-text" translatable="yes">Search Image</property>
-                        <property name="action-name">win.search-image</property>
-                      </object>
-                    </child>
-                  </object>
-                </child>
-                <child>
-                  <object class="GtkBox">
-                    <property name="orientation">horizontal</property>
-                    <child>
-                      <object class="GtkPicture" id="picture" />
-                    </child>
-                    <child>
-                      <object class="GtkBox">
-                        <property name="orientation">vertical</property>
-                        <child>
-                          <object class="GtkFrame">
-                            <child type="label">
-                              <object class="GtkLabel">Result Text: </object>
-                            </child>
-                            <child>
-                              <object class="GtkEntry" id="ocr_frame" />
-                            </child>
-                          </object>
-                        </child>
-                        <child>
-                          <object class="GtkFrame">
-                            <child type="label">
-                              <object class="GtkLabel">Translated Text: </object>
-                            </child>
-                            <child>
-                              <object class="GtkEntry" id="translator_frame" />
-                            </child>
                           </object>
                         </child>
                       </object>
