--- a/resources/window.ui
+++ b/resources/window.ui
@@ -66,7 +66,7 @@
                           <object class="GtkToggleButton">
                             <property name="icon-name">list-add-symbolic</property>
                             <property name="tooltip-text" translatable="yes">New Collection</property>
-                            <property name="action-name">win.new-collection</property>
+                            <property name="action-name">win.new-profile</property>
                           </object>
                         </child>
                       </object>
@@ -75,7 +75,8 @@
                       <object class="GtkScrolledWindow">
                         <property name="vexpand">True</property>
                         <property name="child">
-                          <object class="GtkListBox" id="collections_list">
+                          <object class="GtkListBox" id="profiles_list">
+                            <property name="selection-mode">1</property>
                             <style>
                               <class name="navigation-sidebar" />
                             </style>
@@ -127,6 +128,17 @@
                         <property name="margin-start">10</property>
                         <property name="margin-end">10</property>
                         <property name="orientation">vertical</property>
+                        <child>
+                          <object class="GtkLabel">
+                            <property name="halign">start</property>
+                            <property name="label">Title: </property>
+                          </object>
+                        </child>
+                        <child>
+                          <object class="GtkEntry" id="title">
+                            <property name="placeholder-text">Title of this profile</property>
+                          </object>
+                        </child>
                         <child>
                           <object class="GtkLabel">
                             <property name="halign">start</property>
